@@ -3,6 +3,7 @@ Revision history for Perl extension Bitcoin::Crypto.
 2.006 NOT RELEASED
 	[Improvements]
 	- test suite now uses Test2
+	- Bitcoin::Crypto::Types is now documented
 
 2.005 Wed Jul 24 2024
 	[Added interface]
